--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <servlet-api.v>3.1.0</servlet-api.v>
         <jsp-api.v>2.3.3</jsp-api.v>
         <spring.v>4.3.18.RELEASE</spring.v>
+        <mybatis-generator-core.v>1.3.7</mybatis-generator-core.v>
         <mybatis.v>3.4.6</mybatis.v>
         <mybatis-spring.v>1.3.2</mybatis-spring.v>
         <mysql.v>5.1.46</mysql.v>
@@ -89,6 +90,13 @@
             <version>${spring.v}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>${mybatis-generator-core.v}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -134,6 +142,24 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>${mybatis-generator-core.v}</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-maven-plugin -->
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
