--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,6 +3,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/db_employee?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
 
 # others
